<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Cell Broadcasts</string>
    <string name="sms_cb_settings">Emergency alerts</string>
    <string name="cell_broadcast_settings_not_available">Cell Broadcast settings are not available for this user</string>
    <string name="button_dismiss">OK</string>
    <string name="no_cell_broadcasts">There are no active alerts in your area. You can change the Alert settings using the Settings menu option.</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_delete_all">Delete broadcasts</string>
    <string name="message_options">Message options</string>
    <string name="menu_view_details">View details</string>
    <string name="menu_delete">Delete broadcast</string>
    <string name="view_details_title">Alert details</string>
    <string name="confirm_delete_broadcast">Delete this broadcast?</string>
    <string name="confirm_delete_all_broadcasts">Delete all received broadcast messages?</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="etws_earthquake_warning">Earthquake warning</string>
    <string name="etws_tsunami_warning">Tsunami warning</string>
    <string name="etws_earthquake_and_tsunami_warning">Earthquake and tsunami warning</string>
    <string name="etws_test_message">ETWS test message</string>
    <string name="etws_other_emergency_type">Emergency warning</string>
    <string name="cmas_presidential_level_alert">Presidential alert</string>
    <string name="cmas_extreme_alert">Emergency alert: Extreme</string>
    <string name="cmas_severe_alert">Emergency alert: Severe</string>
    <string name="cmas_amber_alert">Child abduction (Amber alert)</string>
    <string name="cmas_required_monthly_test">Emergency alert monthly test</string>
    <string name="cmas_exercise_alert">Emergency alert (exercise)</string>
    <string name="cmas_operator_defined_alert">Emergency alert (operator)</string>
    <string name="pws_other_message_identifiers">Emergency alert</string>
    <string name="cb_other_message_identifiers">Broadcast messages</string>
    <string name="emergency_alerts_title">Alerts</string>
    <string name="notification_channel_broadcast_messages">Broadcast messages</string>
    <string name="enable_emergency_alerts_title">Allow alerts</string>
    <string name="enable_emergency_alerts_summary">Receive emergency notifications</string>
    <string name="alert_reminder_interval_title">Alert reminder sound</string>
    <string name="alert_reminder_interval_summary"></string>
    <string name="enable_alert_speech_title">Speak alert message</string>
    <string name="enable_alert_speech_summary">Use text-to-speech to speak emergency alert messages</string>
    <string name="emergency_alert_history_title">Emergency alert history</string>
    <string name="alert_preferences_title">Alert preferences</string>
    <string name="enable_etws_test_alerts_title">ETWS test broadcasts</string>
    <string name="enable_etws_test_alerts_summary">Test broadcasts for Earthquake Tsunami Warning System</string>
    <string name="enable_cmas_extreme_threat_alerts_title">Extreme threats</string>
    <string name="enable_cmas_extreme_threat_alerts_summary">Extreme threats to life and property</string>
    <string name="enable_cmas_severe_threat_alerts_title">Severe threats</string>
    <string name="enable_cmas_severe_threat_alerts_summary">Severe threats to life and property</string>
    <string name="enable_cmas_amber_alerts_title">AMBER alerts</string>
    <string name="enable_cmas_amber_alerts_summary">Child abduction emergency bulletins</string>
    <string name="enable_cmas_test_alerts_title">CMAS test broadcasts</string>
    <string name="enable_cmas_test_alerts_summary">Test broadcasts for Commercial Mobile Alert System</string>
    <string name="enable_alert_vibrate_title">Vibrate</string>
    <string name="use_full_volume_title">Use full volume</string>
    <string name="use_full_volume_summary">Ignore other volume and Do Not Disturb preferences</string>
    <string name="enable_area_update_info_alerts_title">Area update broadcasts</string>
    <string name="enable_area_update_info_alerts_summary">Show update information in SIM status</string>
    <string name="category_dev_settings_title">Developer options</string>
    <string name="cmas_category_heading">Alert Category:</string>
    <string name="cmas_category_geo">Geophysical</string>
    <string name="cmas_category_met">Meteorological</string>
    <string name="cmas_category_safety">Safety</string>
    <string name="cmas_category_security">Security</string>
    <string name="cmas_category_rescue">Rescue</string>
    <string name="cmas_category_fire">Fire</string>
    <string name="cmas_category_health">Health</string>
    <string name="cmas_category_env">Environmental</string>
    <string name="cmas_category_transport">Transportation</string>
    <string name="cmas_category_infra">Infrastructure</string>
    <string name="cmas_category_cbrne">Chemical/Biological/Nuclear/Explosive</string>
    <string name="cmas_category_other">Other</string>
    <string name="cmas_response_heading">Response Type:</string>
    <string name="cmas_response_shelter">Shelter</string>
    <string name="cmas_response_evacuate">Evacuate</string>
    <string name="cmas_response_prepare">Prepare</string>
    <string name="cmas_response_execute">Execute</string>
    <string name="cmas_response_monitor">Monitor</string>
    <string name="cmas_response_avoid">Avoid</string>
    <string name="cmas_response_assess">Assess</string>
    <string name="cmas_response_none">None</string>
    <string name="cmas_severity_heading">Severity:</string>
    <string name="cmas_severity_extreme">Extreme</string>
    <string name="cmas_severity_severe">Severe</string>
    <string name="cmas_urgency_heading">Urgency:</string>
    <string name="cmas_urgency_immediate">Immediate</string>
    <string name="cmas_urgency_expected">Expected</string>
    <string name="cmas_certainty_heading">Certainty:</string>
    <string name="cmas_certainty_observed">Observed</string>
    <string name="cmas_certainty_likely">Likely</string>
    <string name="delivery_time_heading">Received:</string>
    <string name="notification_multiple"><xliff:g id="count">%s</xliff:g> unread alerts.</string>
    <string name="notification_multiple_title">New alerts</string>
    <string name="show_cmas_opt_out_summary">Show an opt-out dialog after displaying the first CMAS alert (other than Presidential Alert).</string>
    <string name="show_cmas_opt_out_title">Show opt-out dialog</string>
    <string name="cmas_opt_out_dialog_text">You are currently receiving Emergency Alerts. Would you like to continue receiving Emergency Alerts?</string>
    <string name="cmas_opt_out_button_yes">Yes</string>
    <string name="cmas_opt_out_button_no">No</string>
    <string name="cb_list_activity_title">"Emergency alert history"</string>
    <string-array name="alert_reminder_interval_entries">
      <item>Once</item>
      <item>Every 2 minutes</item>
      <item>Every 5 minutes</item>
      <item>Every 15 minutes</item>
      <item>Off</item>
    </string-array>
    <string-array name="alert_reminder_interval_values">
      <item>1</item>
      <item>2</item>
      <item>5</item>
      <item>15</item>
      <item>0</item>
    </string-array>
    <string-array name="alert_reminder_interval_active_values">
      <item>1</item>
      <item>2</item>
      <item>15</item>
      <item>0</item>
    </string-array>
    <string name="alert_reminder_interval_default_value">0</string>
</resources>